# google-drive-backup

./: .coverage  .gitignore  README.md  config.example.yaml  install.sh  pyproject.toml  test_results.txt
.github/workflows/: ci.yml  e2e.yml
docs/superpowers/plans/: 2026-03-17-google-drive-backup.md  2026-03-18-dry-run-github-cicd.md  2026-04-01-backup-enhancements.md
docs/superpowers/specs/: 2026-03-17-google-drive-backup-design.md  2026-03-18-dry-run-github-cicd-design.md  2026-04-01-backup-enhancements-design.md
scripts/: cleanup_e2e.py  setup.py
src/gdrive_backup/: __init__.py  auth.py  classifier.py  cli.py  config.py  daemon.py  drive_client.py  git_manager.py  github_manager.py  logging_setup.py  mirror_manager.py  sync_engine.py
tests/: conftest.py  test_auth.py  test_classifier.py  test_cli.py  test_config.py  test_daemon.py  test_drive_client.py  test_e2e.py  test_git_manager.py  test_github_manager.py  test_mirror_manager.py  test_setup.py  test_sync_engine.py
